Fix the Future Warning
给第24，26，29步的concat方法里加上参数sort=False来接受future behavior。

--- a/Sparkify-project.ipynb
+++ b/Sparkify-project.ipynb
@@ -676,7 +676,7 @@
     "avg_count_true = avg_count_true.toPandas()\n",
     "avg_count_false = data.filter(\"page == 'Roll Advert' AND Churn == 0\").groupby(data.userId).count().agg(avg('count').alias('avg_count_false'))\n",
     "avg_count_false = avg_count_false.toPandas()\n",
-    "avg_count = pd.concat([avg_count_true, avg_count_false], axis=0, ignore_index=True)\n",
+    "avg_count = pd.concat([avg_count_true, avg_count_false], axis=0, ignore_index=True, sort=False)\n",
     "avg_count.index = ['True_user', 'False_user']\n",
     "avg_count"
    ]
@@ -788,7 +788,7 @@
     "avg_count_true_songs_played = avg_count_true_songs_played.toPandas()\n",
     "avg_count_false_songs_played = data.filter(\"page == 'NextSong' AND Churn == 0\").groupby(data.userId).count().agg(avg('count').alias('avg_count_false'))\n",
     "avg_count_false_songs_played = avg_count_false_songs_played.toPandas()\n",
-    "avg_count_songs = pd.concat([avg_count_true_songs_played, avg_count_false_songs_played], axis=0, ignore_index=True)\n",
+    "avg_count_songs = pd.concat([avg_count_true_songs_played, avg_count_false_songs_played], axis=0, ignore_index=True, sort=False)\n",
     "avg_count_songs.index = ['True_user', 'False_user']\n",
     "avg_count"
    ]
@@ -920,7 +920,7 @@
     "avg_count_true_help = avg_count_true_help.toPandas()\n",
     "avg_count_false_help = data.filter(\"page == 'Help' AND Churn == 0\").groupby(data.userId).count().agg(avg('count').alias('avg_count_false'))\n",
     "avg_count_false_help = avg_count_false_help.toPandas()\n",
-    "avg_count_help = pd.concat([avg_count_true_help, avg_count_false_help], axis=0, ignore_index=True)\n",
+    "avg_count_help = pd.concat([avg_count_true_help, avg_count_false_help], axis=0, ignore_index=True, sort=False)\n",
     "avg_count_help.index = ['True_user', 'False_user']\n",
     "avg_count_help"
    ]
